# cross_project

./: README.md
cross_arduino/: cross_arduino.ino
cross_arduino_simulink/: cross_arduino_simulink.ino
cross_control/: CMakeLists.txt  package.xml
cross_control/config/: cross_controllers.yaml
cross_control/launch/: cross_control.launch.py
cross_description/: CMakeLists.txt  package.xml
cross_description/launch/: cross_robot_bringup.launch.py  cross_robot_hardware.launch.py
cross_description/meshes/: wheel.stl
cross_description/urdf/: cross_robot.urdf  cross_robot.urdf.xacro
cross_description/urdf/control/: cross_ros2_control.xacro
cross_description/urdf/wheels/: wheels_macro.xacro
cross_hardware/: CMakeLists.txt  cross_hardware.xml  package.xml
cross_hardware/include/cross_hardware/: cross_velocity_control.hpp  visibility_control.h
cross_hardware/src/: cross_velocity_control.cpp
ros2_components/ros2_control/controller_manager/src/: controller_manager.cpp
ros2_components/ros2_controllers/mecanum_drive_controller/: CMakeLists.txt  mecanum_drive_plugin.xml  package.xml
ros2_components/ros2_controllers/mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
ros2_components/ros2_controllers/mecanum_drive_controller/src/: mecanum_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
